--- a/index.html
+++ b/index.html
@@ -507,6 +507,7 @@
         }
       }
     </script>
+    <script type="module" src="js/fetchAPI.js"></script>
     <script type="module" src="js/script.js"></script>
     <script type="module" src="js/controls-ui.js"></script>
     <script type="module" src="js/pdfSignature.js"></script>
