--- a/index.html
+++ b/index.html
@@ -435,12 +435,14 @@
             </div>
             <div class="page" id="page-3">
               <div class="row">
-                <div>
+                <div class="signature-container">
                   <h3>Acknowledgment and Signature</h3>
-                  <canvas id="signature-pad" width="400" height="200"></canvas>
-                </div>
-                <div>
-                  <button type="button" class="button-24" id="clear-signature" style="width: 100%">Clear Signature</button>
+                  <div>
+                    <canvas id="signature-pad" width="400" height="200"></canvas>
+                  </div>
+                  <div>
+                    <button type="button" class="button-24" id="clear-signature" style="width: 100%">Clear Signature</button>
+                  </div>
                 </div>
               </div>
 
@@ -452,9 +454,8 @@
               <div>
                 <div class="buttonsContainer">
                   <button class="prev">PREV</button>
-                  <button type="submit" class="button-24" id="generate-pdf" role="button">Submit</button>
+                  <button type="submit" class="button-24" id="generate-pdf" role="button">SUBMIT</button>
                 </div>
-
               </div>
             </div>
           </div>
@@ -506,6 +507,7 @@
     <script type="module" src="js/script.js"></script>
     <script type="module" src="js/controls-ui.js"></script>
     <script type="module" src="js/pdfSignature.js"></script>
+    <script type="module" src="js/fetchAPI.js"></script>
 
     <script type="text/javascript" src="js/email.min.js"></script>
     <script src="assets/jquery/jquery-3.7.1.min.js"></script>
