--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             </div>
 
             <div class="texture-option-wrapper" id="textureHave">
-              <img class="texture-option" src="assets/textures/square.png" width="50" height="50" alt="Diagonal Square Quilting" />
+              <img class="texture-option" src="assets/textures/Square.png" width="50" height="50" alt="Diagonal Square Quilting" />
               <p class="color-title">Diagonal Square Quilting</p>
             </div>
 
