--- a/index.html
+++ b/index.html
@@ -342,9 +342,15 @@
                   <div class="customers">
                     <h3 style="margin-bottom: 20px; margin-top: 0px">Personal Details</h3>
                     <form id="agreement-form">
-                      <div class="form-group">
-                        <input type="text" id="customer-name" name="customer-name" placeholder=" " required />
-                        <label for="customer-name">Name*</label>
+                      <div class="form-group form-two">
+                        <div>
+                          <input type="text" id="first-name" name="first-name" placeholder=" " required />
+                          <label for="first-name">First Name*</label>
+                        </div>
+                        <div>
+                          <input type="text" id="last-name" name="last-name" placeholder=" " required />
+                          <label for="last-name">Last Name*</label>
+                        </div>
                       </div>
 
                       <div class="form-group">
